--- a/package.json
+++ b/package.json
@@ -8,8 +8,19 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.19.1",
+    "bootstrap-vue": "^2.2.0",
     "core-js": "^3.4.4",
-    "vue": "^2.6.10"
+    "json-server": "^0.15.1",
+    "moment": "^2.24.0",
+    "node-sass": "^4.13.0",
+    "sass-loader": "^8.0.1",
+    "v-hotkey": "^0.7.1",
+    "vee-validate": "^3.2.1",
+    "vue": "^2.6.10",
+    "vue-filter-date-format": "^1.3.0",
+    "vue-router": "^3.1.3",
+    "vuex": "^3.1.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
